--- a/tests/template/overall.html
+++ b/tests/template/overall.html
@@ -1,10 +1,6 @@
-<div>Wizard {{wizard.name}}</div>
 <ul>
-    <li ng-repeat="person in party" 
-        ng-hide="person.injuries && person.injuries > 9"
-        ng-class="{dwarf: person.species == 'dwarf', hobbit: person.species == 'hobbit', injured: person.injuries}">
-        <p>Name: <strong ng-bind="person.name"></strong></p>
-        <p>Species: <em>{{person.species}}</em></p>
-        <p ng-show="person.injuries">Injuries: {{person.injuries}}</p>
+    <li ng-repeat="phone in phones" ng-show="phone.name">
+        <span>{{phone.name}}</span>
+        <p>{{phone.snippet}}</p>
     </li>
 </ul>
